package l3s6.projet.star.referee;

public class NonExistantPlayerException extends Exception {
    public NonExistantPlayerException(String message) {
        super(message);
    }
}
