package l3s6.projet.star.referee.board;

public class InvalidMeepleMoveException extends Exception {
    public InvalidMeepleMoveException(String message) {
        super(message);
    }
}
