package l3s6.projet.star.referee.board;

public class InvalidMeeplePositionException  extends Exception {
    public InvalidMeeplePositionException(String message) {
        super(message);
    }
}
