package l3s6.projet.star.referee.board;

public class InvalidTileMoveException extends Exception {
    public InvalidTileMoveException(String message) {
        super(message);
    }
}
